--- a/pointer_callback/Cargo.toml
+++ b/pointer_callback/Cargo.toml
@@ -1,16 +1,12 @@
 [package]
-name = "poc_ffi_bridge"
+name = "pointer_callback"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[workspace]
-members = [
-  "poc_cc",
-  "poc_callback",
-  "poc_function_pointer",
-  "pointer_callback"
-  ]
-
 [dependencies]
+libc = "0.2"
+
+[build-dependencies]
+cc = "1.0"
