送信構造体の簡略化

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,8 @@ members = [
   "pass_object_3",
   "bridge_with_tokio",
   "bridge_with_sync",
-  "convert_pointer"
+  "convert_pointer",
+  "bridge_with_sync_2"
   ]
 
 [dependencies]
